--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ dependencies {
 	modCompile "alexiil.mc.lib:libblockattributes:0.3.1"
 	modCompile "alexiil.mc.mod:simple_pipes:0.1.3"
 	modCompile "grondag:frex:0.4.+"
-	modCompile "grondag:canvas:0.4.4"
+	modCompile "grondag:canvas:0.4.+"
 	modCompile "io.github.prospector.modmenu:ModMenu:1.4.0-71"
 	modCompile "roughly-enough-items:RoughlyEnoughItems:2.7.11.97"
 	modCompile "cloth:ClothEvents:0.3.1.23"
