--- a/build.gradle
+++ b/build.gradle
@@ -80,10 +80,10 @@ dependencies {
 	compile "com.google.code.findbugs:jsr305:3.0.2"
 	
 	//modCompile "mcp.mobius.waila:Hwyla:1.14 Pre-Release 3-1.9.15-59"
-	modCompile "alexiil.mc.lib:libblockattributes:0.3.1"
-	modCompile "alexiil.mc.mod:simple_pipes:0.1.3"
+	//modCompile "alexiil.mc.lib:libblockattributes:0.3.1"
+	//modCompile "alexiil.mc.mod:simple_pipes:0.1.3"
 	modCompile "grondag:frex:0.4.+"
-	modCompile "grondag:canvas:0.5.2"
+	modCompile "grondag:canvas:0.5.8"
 	modCompile "io.github.prospector.modmenu:ModMenu:1.4.0-71"
 	modCompile "roughly-enough-items:RoughlyEnoughItems:2.7.11.97"
 	modCompile "cloth:ClothEvents:0.3.1.23"
