--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,27 @@
 plugins {
-	id 'fabric-loom' version '0.2.1-SNAPSHOT'
-	id 'java'
-	id 'maven'
+	id 'fabric-loom' version '0.2.5-SNAPSHOT'
 	id 'maven-publish'
-	id "com.zoltu.git-versioning" version "3.0.3"
+	id "org.ajoberstar.grgit" version "3.1.1"
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-def versionInfo = ZoltuGitVersioning.versionInfo
-def autoVersion = "${versionInfo.major}.${versionInfo.minor}.${versionInfo.commitCount}"
-
 archivesBaseName = "smart_chest_2k"
 group = "grondag"
-version = autoVersion
+def version_tag = 'smart_chest_2k_version'
+
+if (grgit == null) {
+	version = '99.0.0-nogit'
+} else if (project.hasProperty(version_tag)) {
+	if(grgit.status().isClean()) {
+		version = project.getProperty(version_tag) + '.' + grgit.log().size() + '+' + project.minecraft_version
+	} else {
+		version = project.getProperty(version_tag) + '.' + (grgit.log().size() + 1) + '-snapshot+' + project.minecraft_version
+	}
+} else {
+	version = '99.0.0-local'
+}
 
 minecraft {
 }
@@ -71,53 +78,63 @@ repositories {
 def mcVersion = "1.14"
 
 dependencies {
-	minecraft "com.mojang:minecraft:$mcVersion"
-	mappings "net.fabricmc:yarn:$mcVersion+build.1"
-	modCompile "net.fabricmc:fabric-loader:0.4.2+build.132"
-	modCompile "net.fabricmc:fabric:0.2.7+build.127"
+	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
+	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	
 	compile "org.apiguardian:apiguardian-api:1.0.0"
 	compile "com.google.code.findbugs:jsr305:3.0.2"
 	
-	//modCompile "mcp.mobius.waila:Hwyla:1.14 Pre-Release 3-1.9.15-59"
-	//modCompile "alexiil.mc.lib:libblockattributes:0.3.1"
-	//modCompile "alexiil.mc.mod:simple_pipes:0.1.3"
-	modCompile "grondag:frex:0.4.+"
-	modCompile "grondag:canvas:0.5.+"
-	modCompile "io.github.prospector.modmenu:ModMenu:1.4.0-71"
-	modCompile "roughly-enough-items:RoughlyEnoughItems:2.7.11.97"
-	modCompile "cloth:ClothEvents:0.3.1.23"
-    modCompile "cloth-config:ClothConfig:0.2.0.12"
+//	modCompile "io.github.prospector.modmenu:ModMenu:1.4.0-71"
+//	modCompile "roughly-enough-items:RoughlyEnoughItems:2.7.11.97"
+
+	modRuntime ("me.shedaniel.cloth:config-2:${clothconfig_version}") {
+        exclude group :"io.github.prospector.modmenu"
+        exclude group :"net.fabricmc.fabric-api"
+    }
+	include "me.shedaniel.cloth:config-2:${clothconfig_version}"
     
-	modCompile "grondag:fermion:0.4.+"
-	include "grondag:fermion:0.4.+"
+	modImplementation "grondag:fermion:${project.fermion_version}+"
+    include "grondag:fermion:${project.fermion_version}+"
+    
+	modImplementation "grondag:fermion-modkeys:${project.fermion_modkeys_version}+"
+    include "grondag:fermion-modkeys:${project.fermion_modkeys_version}+"
+    
+    modImplementation "grondag:fermion-varia:${project.fermion_varia_version}+"
+    include "grondag:fermion-varia:${project.fermion_varia_version}+"
 	
 	modCompile "grondag:brocade-connect:1.0.1"
 	include "grondag:brocade-connect:1.0.1"
 	
-	compile "blue.endless:jankson:1.1.0"
-	compile "org.joml:joml:1.9.14"
+	modImplementation "blue.endless:jankson:1.1.2"
+	include "blue.endless:jankson:1.1.2"
 }
 
 publishing {
-    publications {
-        mavenJava(MavenPublication) {
-			artifact(jar) {
+	publications {
+		mavenJava(MavenPublication) {
+			artifact(remapJar) {
 				builtBy remapJar
 			}
 			artifact(sourcesJar) {
 				builtBy remapSourcesJar
 			}
-        }
-    }
+		}
+	}
 
-    repositories {
-        maven {
+	repositories {
+		mavenLocal()
+		maven {
             url "https://grondag-repo.appspot.com"
             credentials {
-	            username "${maven_user}"
-	            password "${maven_password}"
+				if (project.hasProperty('maven_user')){
+					username = project.getProperty('maven_user')
+				}
+				if (project.hasProperty('maven_password')){
+					password = project.getProperty('maven_password')
+				}
 			}
         }
-    }
+	}
 }
