--- a/build.gradle
+++ b/build.gradle
@@ -83,32 +83,45 @@ dependencies {
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	
-	compile "org.apiguardian:apiguardian-api:1.0.0"
-	compile "com.google.code.findbugs:jsr305:3.0.2"
+	modImplementation ("grondag:exotic-matter:${project.exotic_matter_version}.+") {
+        exclude group :"net.fabricmc.fabric-api"
+        exclude group :"io.github.prospector.modmenu"
+	}
 	
-//	modCompile "io.github.prospector.modmenu:ModMenu:1.4.0-71"
-//	modCompile "roughly-enough-items:RoughlyEnoughItems:2.7.11.97"
+	modRuntime ("io.github.prospector:modmenu:${project.modmenu_version}") {
+        exclude group :"net.fabricmc.fabric-api"
+	}
+	
+	// For dev env testing 
+	modRuntime ("com.jamieswhiteshirt:developer-mode:${project.devmode_version}") {
+        exclude group :"net.fabricmc.fabric-api"
+        exclude group :"io.github.prospector.modmenu"
+	}
+    
+	modRuntime ("grondag:canvas:${project.canvas_version}.+") {
+        exclude group :"net.fabricmc.fabric-api"
+        exclude group :"io.github.prospector.modmenu"
+	}
 
-	modRuntime ("me.shedaniel.cloth:config-2:${clothconfig_version}") {
+	modImplementation ("io.github.cottonmc:LibGui:${libgui_version}") {
+		exclude group :"net.fabricmc.fabric-api"
+	}
+	include "io.github.cottonmc:LibGui:${libgui_version}"
+	
+	modImplementation ("blue.endless:jankson:${jankson_version}") {
+        exclude group :"net.fabricmc.fabric-api"
+    }
+	include "blue.endless:jankson:${jankson_version}"
+	
+	modImplementation ("me.shedaniel.cloth:config-2:${clothconfig_version}") {
         exclude group :"io.github.prospector.modmenu"
         exclude group :"net.fabricmc.fabric-api"
     }
 	include "me.shedaniel.cloth:config-2:${clothconfig_version}"
-    
-	modImplementation "grondag:fermion:${project.fermion_version}+"
-    include "grondag:fermion:${project.fermion_version}+"
-    
-	modImplementation "grondag:fermion-modkeys:${project.fermion_modkeys_version}+"
-    include "grondag:fermion-modkeys:${project.fermion_modkeys_version}+"
-    
-    modImplementation "grondag:fermion-varia:${project.fermion_varia_version}+"
-    include "grondag:fermion-varia:${project.fermion_varia_version}+"
 	
-	modCompile "grondag:brocade-connect:1.0.1"
-	include "grondag:brocade-connect:1.0.1"
-	
-	modImplementation "blue.endless:jankson:1.1.2"
-	include "blue.endless:jankson:1.1.2"
+	// dev env annotation support
+	compile "org.apiguardian:apiguardian-api:1.0.0"
+	compile "com.google.code.findbugs:jsr305:3.0.2"
 }
 
 publishing {
