--- a/gradle.properties
+++ b/gradle.properties
@@ -1,22 +1,22 @@
 org.gradle.jvmargs=-Xmx2G
 
 smart_chest_2k_version=0.1
-exotic_matter_version=1.7
+exotic_matter_version=1.13
 
-minecraft_version=19w39a
-yarn_mappings=19w39a+build.8
-loader_version=0.6.2+build.166
-fabric_version=0.4.2+build.244-1.15
-devmode_version=1.0.14
-modmenu_version=1.7.13-unstable.19w38b+build.5
+minecraft_version=1.15
+yarn_mappings=1.15+build.2
+loader_version=0.7.2+build.174
+fabric_version=0.4.24+build.279-1.15
+devmode_version=1.0.15
+modmenu_version=1.8.1+build.17
 
-clothconfig_version=1.1.2
+clothconfig_version=2.5.2
 
-fermion_version=1.3
-special_circumstances_version=1.3
-fermion_modkeys_version=1.3
-fermion_varia_version=1.3
-fermion_simulator_version=1.3
+fermion_version=1.9
+special_circumstances_version=1.4
+fermion_modkeys_version=1.4
+fermion_varia_version=1.9
+fermion_simulator_version=1.4
 canvas_version=0.8
-frex_version=1.1
-joml_version=1.1
+frex_version=1.2
+joml_version=1.4
