--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,11 @@
 org.gradle.jvmargs=-Xmx2G
+org.gradle.daemon=false
 
-smart_chest_2k_version=0.1
+group=grondag
+mod_name=contained
+contained_version=0.1
+
 exotic_matter_version=1.13
-
-minecraft_version=1.15
-yarn_mappings=1.15+build.2
-loader_version=0.7.2+build.174
-fabric_version=0.4.24+build.279-1.15
-devmode_version=1.0.15
-modmenu_version=1.8.1+build.17
-
-clothconfig_version=2.5.2
-
 fermion_version=1.9
 special_circumstances_version=1.4
 fermion_modkeys_version=1.4
@@ -20,3 +14,18 @@ fermion_simulator_version=1.4
 canvas_version=0.8
 frex_version=1.2
 joml_version=1.4
+
+jankson_version=2.0.0+j1.2.0
+clothconfig_version=2.5.2
+modmenu_version=1.8.1+build.17
+
+mc_tag = mc115
+minecraft_version=1.15
+yarn_mappings=1.15+build.2
+loader_version=0.7.2+build.174
+fabric_version=0.4.24+build.279-1.15
+
+license_header=APACHE
+
+github_repository_owner=grondag
+github_repository=contained
