--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.daemon=false
 
 group=grondag
-mod_name=contained
-contained_version=0.1
+mod_name=facility
+facility_version=0.1
 
 exotic_matter_version=1.13
 fermion_version=1.9
