--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -26,7 +26,6 @@ repositories {
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
-	// mappings "grondag:cordage:${project.cordage_mappings}"
 	modApi "net.fabricmc:fabric-loader:${project.loader_version}"
 	modApi "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	
@@ -52,5 +51,32 @@ dependencies {
         exclude group :"net.fabricmc.fabric-api"
     }
     
+    modApi "grondag.fluidit:config-2:${project.cloth_config_version}"
+    include "me.shedaniel.cloth:config-2:${project.cloth_config_version}"
+    
+    modImplementation ("grondag:fermion-${project.mc_tag}:${project.fermion_version}.+") { transitive = false }
+	include "grondag:fermion-${project.mc_tag}:${project.fermion_version}.+"
+
+	modImplementation ("grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+") { transitive = false }
+	include "grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+"
+
+    modImplementation ("grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+") { transitive = false }
+    include "grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+"
+
+    //modImplementation ("grondag:fermion-simulator-${project.mc_tag}:${project.fermion_simulator_version}.+") { transitive = false }
+    //include "grondag:fermion-simulator-${project.mc_tag}:${project.fermion_simulator_version}.+"
+    
+    //modImplementation ("grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+") { transitive = false }
+    //include "grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+"
+
+  	modImplementation ("grondag:fermion-gui-${project.mc_tag}:${project.fermion_gui_version}.+") { transitive = false }
+  	include "grondag:fermion-gui-${project.mc_tag}:${project.fermion_gui_version}.+"
+
+	modImplementation ("grondag:fonthack-${project.mc_tag}:${project.fonthack_version}.+") { transitive = false }
+	include "grondag:fonthack-${project.mc_tag}:${project.fonthack_version}.+"
+	
+	modImplementation ("grondag:frex-${project.mc_tag}:${project.fluidity_version}.+") { transitive = false }
+	include "grondag:frex-${project.mc_tag}:${project.fluidity_version}.+"
+
     
 }
