--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,11 @@ facility_version=0.1
 
 exotic_matter_version=1.14
 fermion_version=1.10
-special_circumstances_version=1.4
+fermion_gui_version=1.2
 fermion_modkeys_version=1.5
 fermion_varia_version=1.10
-fermion_simulator_version=1.4
-canvas_version=0.8
-frex_version=1.2
-joml_version=1.4
+fluidity_version=0.2
+fonthack_version=1.1
 
 jankson_version=2.0.0+j1.2.0
 clothconfig_version=2.5.3
