--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,7 @@ fonthack_version=1.1
 jankson_version=2.0.0+j1.2.0
 clothconfig_version=2.5.3
 modmenu_version=1.8.2+build.18
+rei_version=3.2.33
 
 mc_tag = mc115
 minecraft_version=1.15.1
