Add fluidity to build

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -71,5 +71,8 @@ dependencies {
 	modImplementation ("grondag:fonthack-${project.mc_tag}:${project.fonthack_version}.+") { transitive = false }
 	include "grondag:fonthack-${project.mc_tag}:${project.fonthack_version}.+"
 	
+	modImplementation ("grondag:fluidity-${project.mc_tag}:${project.fluidity_version}.+") { transitive = false }
+	include "grondag:fluidity-${project.mc_tag}:${project.fluidity_version}.+"
+	
 	modImplementation ("grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+") { transitive = false }
 }
