--- a/gradle.properties
+++ b/gradle.properties
@@ -3,26 +3,26 @@ org.gradle.daemon=false
 
 group=grondag
 mod_name=facility
-facility_version=0.2
+facility_version=0.3
 
-exotic_matter_version=1.14
-fermion_version=1.10
-fermion_gui_version=1.2
+exotic_matter_version=1.15
+fermion_version=1.11
+fermion_gui_version=1.3
 fermion_modkeys_version=1.5
-fermion_varia_version=1.10
-fluidity_version=0.3
+fermion_varia_version=1.11
+fluidity_version=0.4
 fonthack_version=1.1
 
 jankson_version=2.0.0+j1.2.0
-clothconfig_version=2.5.3
-modmenu_version=1.8.2+build.18
-rei_version=3.2.33
+clothconfig_version=2.7.1
+modmenu_version=1.8.4+build.20
+rei_version=3.3.12
 
 mc_tag = mc115
-minecraft_version=1.15.1
-yarn_mappings=1.15.1+build.17
-loader_version=0.7.2+build.175
-fabric_version=0.4.26+build.283-1.15
+minecraft_version=1.15.2-pre2
+yarn_mappings=1.15.2-pre2+build.5
+loader_version=0.7.4+build.177
+fabric_version=0.4.28+build.288-1.15
 
 license_header=APACHE
 
