--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -59,10 +59,10 @@ dependencies {
     modImplementation ("grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+") { transitive = false }
     include "grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+"
 
-    //modImplementation ("grondag:fermion-simulator-${project.mc_tag}:${project.fermion_simulator_version}.+") { transitive = false }
+    modImplementation ("grondag:fermion-simulator-${project.mc_tag}:${project.fermion_simulator_version}.+") { transitive = false }
     //include "grondag:fermion-simulator-${project.mc_tag}:${project.fermion_simulator_version}.+"
     
-    //modImplementation ("grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+") { transitive = false }
+    modImplementation ("grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+") { transitive = false }
     //include "grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+"
 
   	modImplementation ("grondag:fermion-gui-${project.mc_tag}:${project.fermion_gui_version}.+") { transitive = false }
@@ -74,5 +74,5 @@ dependencies {
 	modImplementation ("grondag:fluidity-${project.mc_tag}:${project.fluidity_version}.+") { transitive = false }
 	include "grondag:fluidity-${project.mc_tag}:${project.fluidity_version}.+"
 	
-	modImplementation ("grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+") { transitive = false }
+	modImplementation ("grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+")
 }
