--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,11 @@ facility_version=0.3
 
 exotic_matter_version=1.15
 fermion_version=1.11
+special_circumstances_version=1.4
 fermion_gui_version=1.3
 fermion_modkeys_version=1.5
 fermion_varia_version=1.11
+fermion_simulator_version=1.4
 fluidity_version=0.4
 fonthack_version=1.1
 
