Add hyper crate, portable tank changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ mod_name=facility
 facility_version=0.4
 
 exotic_matter_version=1.15
-fermion_version=1.11
+fermion_version=1.12
 special_circumstances_version=1.4
-fermion_gui_version=1.3
+fermion_gui_version=1.4
 fermion_modkeys_version=1.5
 fermion_varia_version=1.11
 fermion_simulator_version=1.4
@@ -21,10 +21,10 @@ modmenu_version=1.8.4+build.20
 rei_version=3.3.12
 
 mc_tag = mc115
-minecraft_version=1.15.2-pre2
-yarn_mappings=1.15.2-pre2+build.5
-loader_version=0.7.4+build.177
-fabric_version=0.4.28+build.288-1.15
+minecraft_version=1.15.2
+yarn_mappings=1.15.2+build.1
+loader_version=0.7.5+build.178
+fabric_version=0.4.29+build.290-1.15
 
 license_header=APACHE
 
