--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,7 @@ fluidity_version=0.9
 fonthack_version=1.1
 
 jankson_version=2.0.0+j1.2.0
-clothconfig_version=3.0.2-unstable
+clothconfig_version=3.0.2-unstable.202003090708
 modmenu_version=1.10.2+build.1
 rei_version=4.0.11-unstable
 
