--- a/gradle.properties
+++ b/gradle.properties
@@ -6,14 +6,17 @@ mod_name=facility
 facility_version=0.9
 
 exotic_matter_version=2.1
+exotic_art_core_version=1.0
 fermion_version=2.0
 special_circumstances_version=1.6
 fermion_gui_version=2.1
 fermion_modkeys_version=1.8
 fermion_varia_version=2.0
 fermion_simulator_version=1.6
+fermion_orientation_version=1.0
 fluidity_version=0.11
 fonthack_version=2.1
+frex_version=2.0
 
 jankson_version=3.0.0+j1.2.0
 clothconfig_version=4.4.1-unstable
