--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,7 @@ jankson_version=3.0.0+j1.2.0
 clothconfig_version=4.5.6
 modmenu_version=1.13.0+build.20
 rei_version=4.8.1
+libcd_version=2.5.0+1.16.1
 
 mc_tag = mc116
 minecraft_version=1.16.1
