--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -31,6 +31,7 @@ dependencies {
 		
 	modImplementation ("grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+") { transitive = false }
 	modImplementation ("grondag:exotic-art-core-${project.mc_tag}:${project.exotic_art_core_version}.+") { transitive = false }
+	modImplementation ("grondag:exotic-art-tech-${project.mc_tag}:${project.exotic_art_tech_version}.+") { transitive = false }
 	modImplementation ("grondag:frex-${project.mc_tag}:${project.frex_version}.+") { transitive = false }
 	modImplementation ("grondag:fermion-${project.mc_tag}:${project.fermion_version}.+") { transitive = false }
 	modImplementation ("grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+") { transitive = false }
@@ -72,6 +73,7 @@ dependencies {
 	include "grondag:fluidity-${project.mc_tag}:${project.fluidity_version}.+"
 	include "grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+"
 	include "grondag:exotic-art-core-${project.mc_tag}:${project.exotic_art_core_version}.+"
+	include "grondag:exotic-art-tech-${project.mc_tag}:${project.exotic_art_tech_version}.+"
 	include "grondag:fermion-${project.mc_tag}:${project.fermion_version}.+"
 	include "grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+"
 	include "grondag:fermion-gui-${project.mc_tag}:${project.fermion_gui_version}.+"
