--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ facility_version=0.10
 
 exotic_matter_version=2.8
 exotic_art_core_version=1.0
+exotic_art_tech_version=1.1
 fermion_version=2.3
 special_circumstances_version=1.6
 fermion_gui_version=2.3
