Update cloth config

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@ fonthack_version=2.3
 frex_version=3.3
 
 jankson_version=3.0.1+j1.2.0
-clothconfig_version=4.7.0
+clothconfig_version=4.7.0-unstable
 modmenu_version=1.14.6+build.31
 rei_version=5.2.3
 libcd_version=2.5.0+1.16.1
