Update libcd dep, configure curse gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ jankson_version=3.0.1+j1.2.0
 clothconfig_version=4.8.3
 modmenu_version=1.14.13+build.19
 rei_version=5.8.8
-libcd_version=2.5.0+1.16.1
+libcd_version=3.0.3+1.16.3
 
 mc_tag = mc116
 minecraft_version=1.16.4
@@ -36,3 +36,9 @@ license_header=APACHE
 
 github_repository_owner=grondag
 github_repository=contained
+curseforge_id=319822
+release_type=beta
+release_version=1.16.4
+required_dep_slugs=fabric-api
+optional_dep_slugs=modmenu, roughly-enough-items
+embedded_lib_slugs=frex, fermion, cloth-config, jankson, exotic-matter-library, libcd
