--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -66,20 +66,23 @@ dependencies {
         transitive = false
     }
     
-    include "io.github.cottonmc:LibCD:${project.libcd_version}"
-	include "io.github.cottonmc:Jankson-Fabric:${jankson_version}"
-    include "me.shedaniel.cloth:config-2:${project.clothconfig_version}"
-	include "grondag:fonthack-${project.mc_tag}:${project.fonthack_version}.+"
-	include "grondag:fluidity-${project.mc_tag}:${project.fluidity_version}.+"
-	include "grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+"
-	include "grondag:exotic-art-core-${project.mc_tag}:${project.exotic_art_core_version}.+"
-	include "grondag:exotic-art-tech-${project.mc_tag}:${project.exotic_art_tech_version}.+"
-	include "grondag:fermion-${project.mc_tag}:${project.fermion_version}.+"
-	include "grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+"
-	include "grondag:fermion-gui-${project.mc_tag}:${project.fermion_gui_version}.+"
-    include "grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+"
-    include "grondag:fermion-orientation-${project.mc_tag}:${project.fermion_orientation_version}.+"
-    include "grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+"
-	include "io.github.cottonmc:Jankson-Fabric:${jankson_version}"
-	include "me.shedaniel.cloth:config-2:${clothconfig_version}"
+    if (!(gradle.startParameter.taskNames.contains("publish") || gradle.startParameter.taskNames.contains("publishToMavenLocal"))) {
+	    include "io.github.cottonmc:LibCD:${project.libcd_version}"
+		include "io.github.cottonmc:Jankson-Fabric:${jankson_version}"
+	    include "me.shedaniel.cloth:config-2:${project.clothconfig_version}"
+		include "grondag:fonthack-${project.mc_tag}:${project.fonthack_version}.+"
+		include "grondag:fluidity-${project.mc_tag}:${project.fluidity_version}.+"
+		include "grondag:frex-${project.mc_tag}:${project.frex_version}.+"
+		include "grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+"
+		include "grondag:exotic-art-core-${project.mc_tag}:${project.exotic_art_core_version}.+"
+		include "grondag:exotic-art-tech-${project.mc_tag}:${project.exotic_art_tech_version}.+"
+		include "grondag:fermion-${project.mc_tag}:${project.fermion_version}.+"
+		include "grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+"
+		include "grondag:fermion-gui-${project.mc_tag}:${project.fermion_gui_version}.+"
+	    include "grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+"
+	    include "grondag:fermion-orientation-${project.mc_tag}:${project.fermion_orientation_version}.+"
+	    include "grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+"
+		include "io.github.cottonmc:Jankson-Fabric:${jankson_version}"
+		include "me.shedaniel.cloth:config-2:${clothconfig_version}"
+	)
 }
