--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ fermion_orientation_version=1.2
 fluidity_version=0.16
 fonthack_version=2.4
 frex_version=4.4
+frex_events_version=1.2
 
 jankson_version=3.0.1+j1.2.0
 clothconfig_version=4.8.3
