--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ facility_version=0.12
 exotic_matter_version=2.12
 exotic_art_core_version=1.0
 exotic_art_tech_version=1.2
-fermion_version=2.9
+fermion_version=2.10
 special_circumstances_version=1.8
-fermion_gui_version=2.5
+fermion_gui_version=2.6
 fermion_modkeys_version=1.10
 fermion_varia_version=2.6
 fermion_simulator_version=1.8
@@ -20,17 +20,17 @@ fonthack_version=2.4
 frex_version=4.8
 
 jankson_version=3.0.1+j1.2.0
-clothconfig_version=4.8.3
+clothconfig_version=5.0.16
 modmenu_version=1.16.6
 rei_version=5.9.171
 libcd_version=3.0.3+1.16.3
 
-mc_tag = mc116
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.4:v2
-loader_version=0.11.1
-fabric_version=0.30.0+1.16
-loom_version=0.5-SNAPSHOT
+mc_tag=mc117
+minecraft_version=21w11a
+yarn_mappings=21w11a+build.12:v2
+loader_version=0.11.3
+fabric_version=0.32.4+1.17
+loom_version=0.6-SNAPSHOT
 
 license_header=APACHE
 
