--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,24 +20,29 @@ repositories {
 	}
 }
 
+configurations.all {
+    // Check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
+
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
 	modApi "net.fabricmc:fabric-loader:${project.loader_version}"
 	modApi "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	
-	modImplementation ("grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+") { transitive = false }
-	modImplementation ("grondag:exotic-art-core-${project.mc_tag}:${project.exotic_art_core_version}.+") { transitive = false }
-	modImplementation ("grondag:exotic-art-tech-${project.mc_tag}:${project.exotic_art_tech_version}.+") { transitive = false }
-	modImplementation ("grondag:frex-${project.mc_tag}:${project.frex_version}.+") { transitive = false }
-	modImplementation ("grondag:fermion-${project.mc_tag}:${project.fermion_version}.+") { transitive = false }
-	modImplementation ("grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+") { transitive = false }
-	modImplementation ("grondag:fermion-gui-${project.mc_tag}:${project.fermion_gui_version}.+") { transitive = false }
-    modImplementation ("grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+") { transitive = false }
-    modImplementation ("grondag:fermion-orientation-${project.mc_tag}:${project.fermion_orientation_version}.+") { transitive = false }
-    modImplementation ("grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+") { transitive = false }
-    modImplementation ("grondag:fonthack-${project.mc_tag}:${project.fonthack_version}.+") { transitive = false }
-	modImplementation ("grondag:fluidity-${project.mc_tag}:${project.fluidity_version}.+") { transitive = false }
+	modImplementation ("grondag:exotic-matter-${project.mc_tag}:${project.exotic_matter_version}.+") { transitive = false; changing = true; }
+	modImplementation ("grondag:exotic-art-core-${project.mc_tag}:${project.exotic_art_core_version}.+") { transitive = false; changing = true; }
+	modImplementation ("grondag:exotic-art-tech-${project.mc_tag}:${project.exotic_art_tech_version}.+") { transitive = false; changing = true; }
+	modImplementation ("grondag:frex-${project.mc_tag}:${project.frex_version}.+") { transitive = false; changing = true; }
+	modImplementation ("grondag:fermion-${project.mc_tag}:${project.fermion_version}.+") { transitive = false; changing = true; }
+	modImplementation ("grondag:fermion-modkeys-${project.mc_tag}:${project.fermion_modkeys_version}.+") { transitive = false; changing = true; }
+	modImplementation ("grondag:fermion-gui-${project.mc_tag}:${project.fermion_gui_version}.+") { transitive = false; changing = true; }
+    modImplementation ("grondag:fermion-varia-${project.mc_tag}:${project.fermion_varia_version}.+") { transitive = false; changing = true; }
+    modImplementation ("grondag:fermion-orientation-${project.mc_tag}:${project.fermion_orientation_version}.+") { transitive = false; changing = true; }
+    modImplementation ("grondag:special-circumstances-${project.mc_tag}:${project.special_circumstances_version}.+") { transitive = false; changing = true; }
+    modImplementation ("grondag:fonthack-${project.mc_tag}:${project.fonthack_version}.+") { transitive = false; changing = true; }
+	modImplementation ("grondag:fluidity-${project.mc_tag}:${project.fluidity_version}.+") { transitive = false; changing = true; }
     
     modImplementation ("io.github.cottonmc:Jankson-Fabric:${jankson_version}") {
         exclude group :"net.fabricmc.fabric-api"
