--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -55,10 +55,10 @@ dependencies {
         exclude group :"net.fabricmc.fabric-loader"
     }
 	
-	//modImplementation ("io.github.prospector:modmenu:${project.modmenu_version}") {
-    //    exclude group :"net.fabricmc.fabric-api"
-    //    exclude group :"net.fabricmc.fabric-loader"
-    //}
+	modApi("com.terraformersmc:modmenu:${project.modmenu_version}") {
+		exclude group: "net.fabricmc.fabric-api"
+		exclude group: "net.fabricmc.fabric-loader"
+	}
     
     //modImplementation ("me.shedaniel:RoughlyEnoughItems:${project.rei_version}") {
     //	 exclude(module: "ModMenu")
