--- a/gradle.properties
+++ b/gradle.properties
@@ -22,7 +22,7 @@ frex_version=5.2
 jankson_version=3.0.1+j1.2.0
 clothconfig_version=5.0.33
 modmenu_version=2.0.0-beta.5
-rei_version=5.9.171
+rei_version=6.0.246-alpha
 libcd_version=3.0.3+1.16.3
 
 mc_tag=mc117
