--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -57,10 +57,8 @@ dependencies {
         exclude group :"net.fabricmc.fabric-loader"
     }
 	
-	modApi("com.terraformersmc:modmenu:${project.modmenu_version}") {
-		exclude group: "net.fabricmc.fabric-api"
-		exclude group: "net.fabricmc.fabric-loader"
-	}
+	modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
+	modRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
     
     modCompileOnly ("me.shedaniel:RoughlyEnoughItems-api-fabric:${project.rei_version}") {
     	 exclude(module: "ModMenu")
