--- a/gradle.properties
+++ b/gradle.properties
@@ -21,15 +21,15 @@ frex_version=5.2
 
 jankson_version=3.0.1+j1.2.0
 clothconfig_version=5.0.34
-modmenu_version=2.0.0-beta.7
-rei_version=6.0.247-alpha
+modmenu_version=2.0.2
+rei_version=6.0.262-alpha
 libcd_version=3.0.3+1.16.3
 
 mc_tag=mc117
-minecraft_version=1.17-pre4
-yarn_mappings=1.17-pre4+build.1:v2
-loader_version=0.11.3
-fabric_version=0.34.8+1.17
+minecraft_version=1.17
+yarn_mappings=1.17+build.13
+loader_version=0.11.6
+fabric_version=0.36.0+1.17
 loom_version=0.8-SNAPSHOT
 
 license_header=APACHE
@@ -37,7 +37,7 @@ license_header=APACHE
 github_repository_owner=grondag
 github_repository=contained
 curseforge_id=319822
-release_type=beta
+release_type=release
 release_version=1.17
 required_dep_slugs=fabric-api
 optional_dep_slugs=modmenu, roughly-enough-items
