Add bitkit version

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ fermion_orientation_version=1.2
 fluidity_version=0.16
 fonthack_version=3.0
 frex_version=6.0
+bitkit_version=1.0
 
 jankson_version=3.0.1+j1.2.0
 clothconfig_version=5.0.34
