--- a/fabric/project.gradle
+++ b/fabric/project.gradle
@@ -7,18 +7,18 @@ configurations {
 
 dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	modApi "dev.architectury:architectury-fabric:4.4.56"
+	modApi "dev.architectury:architectury-fabric:5.4.15"
 
-	modIncludeImplementation("grondag:exotic-matter-fabric-mc118:3.0.435:fat")
+	modIncludeImplementation("grondag:exotic-matter-fabric-mc119:3.0.440:fat")
 	modIncludeImplementation("io.vram:dtklib:1.0.6")
-	modIncludeImplementation("io.vram:modkeys-fabric-mc118:1.0.9")
-	modIncludeImplementation("io.vram:fluidity-fabric-mc118:2.0.231")
-	modIncludeImplementation ("me.shedaniel.cloth:cloth-config-fabric:6.2.62")
+	modIncludeImplementation("io.vram:modkeys-fabric-mc119:1.0.11")
+	modIncludeImplementation("io.vram:fluidity-fabric-mc119:2.0.233")
+	modIncludeImplementation ("me.shedaniel.cloth:cloth-config-fabric:7.0.65")
 
-	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:8.2.463"
-	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:8.2.463"
-	modCompileOnly "com.terraformersmc:modmenu:3.2.2"
-	modRuntimeOnly "com.terraformersmc:modmenu:3.2.2"
+	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:9.0.466"
+	modRuntimeOnly "me.shedaniel:RoughlyEnoughItems-fabric:9.0.466"
+	modCompileOnly "com.terraformersmc:modmenu:4.0.0-beta.4"
+	modRuntimeOnly "com.terraformersmc:modmenu:4.0.0-beta.4"
 }
 
 sourceSets {
