--- a/project_common.gradle
+++ b/project_common.gradle
@@ -13,5 +13,5 @@ ext.curseforge_id = '319822'
 ext.release_type = 'beta'
 
 ext.build_fat_jar = false
-ext.build_forge = true
+ext.build_forge = false
 ext.accesswidener = 'src/main/resources/facility.accesswidener'
